--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "colab2",
-  "version": "0.1.0",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "next build --no-lint",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
@@ -13,20 +13,26 @@
     "@codemirror/lang-javascript": "^6.1.2",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^2.9.10",
+    "@next/bundle-analyzer": "^13.3.0",
     "@prisma/client": "^4.8.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.8.1",
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "@types/node-localstorage": "^1.3.0",
+    "@typescript/vfs": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "codemirror": "^6.0.1",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "jose": "^4.11.2",
     "jsonwebtoken": "^9.0.0",
+    "lz-string": "^1.5.0",
     "nanoid": "^4.0.0",
     "next": "^13.0.0",
+    "next-compose-plugins": "^2.2.1",
+    "node-localstorage": "^2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
@@ -38,27 +44,43 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/codemirror": "^5.60.7",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/lz-string": "^1.5.0",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "@webpack-cli/generators": "^3.0.1",
     "autoprefixer": "^10.4.7",
+    "css-loader": "^6.7.3",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.1.2",
+    "next-bundle-analyzer": "^0.6.7",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "prisma": "^4.8.0",
+    "rollup-plugin-jsx": "^1.0.3",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.9.4"
+    "ts-loader": "^9.4.2",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "webpack": "^5.76.3",
+    "webpack-cli": "^5.0.1"
   },
   "ct3aMetadata": {
     "initVersion": "7.3.2"
-  }
+  },
+  "description": "My webpack project"
 }
